--- a/commo_expansion.ipynb
+++ b/commo_expansion.ipynb
@@ -73,7 +73,7 @@
         "id": "bC0OklFR5iKP",
         "outputId": "4f557941-3be0-4f32-bb47-2c6eac35457a"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -228,7 +228,7 @@
         "id": "9aRBem1D8x6p",
         "outputId": "d511427a-5ae7-4db0-9300-77dedf0eb429"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -856,7 +856,7 @@
         "id": "tlFD4mi0b3GD",
         "outputId": "a425834e-1e10-4ba2-be7c-320a4240c499"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -869,6 +869,206 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "### 1. **Beef**\n",
+        "   - **Market Size**: The European beef market is large, but consumption is stabilizing.\n",
+        "   - **Trade Figures**: Significant intra-EU trade; limited global exports due to high standards and tariffs.\n",
+        "   - **Concentration**: Fragmented market with various producers, no dominant players.\n",
+        "   - **Price Volatility**: Moderate; influenced by feed prices, disease outbreaks, and trade policies.\n",
+        "   - **Price Correlation**: Correlates with feed costs (corn, soybeans).\n",
+        "   - **Conclusion**: Moderate potential for a futures contract; price volatility could support hedging needs, but market fragmentation and limited export activity might limit liquidity.\n",
+        "\n",
+        "### 2. **Pork**\n",
+        "   - **Market Size**: Large, with high consumption and production in the EU.\n",
+        "   - **Trade Figures**: Significant intra-EU trade and exports to Asia.\n",
+        "   - **Concentration**: More concentrated than beef, with some major integrated players.\n",
+        "   - **Price Volatility**: High; driven by disease outbreaks (e.g., ASF) and export demand.\n",
+        "   - **Price Correlation**: Strong correlation with feed prices and other protein sources.\n",
+        "   - **Conclusion**: High potential for a futures contract due to significant market size, high volatility, and global trade importance.\n",
+        "\n",
+        "### 3. **Vegetal Protein**\n",
+        "   - **Market Size**: Growing rapidly due to the shift towards plant-based diets.\n",
+        "   - **Trade Figures**: Increasing imports of soy and other plant proteins; intra-EU trade is developing.\n",
+        "   - **Concentration**: Market is fragmented, with various small to medium players.\n",
+        "   - **Price Volatility**: Moderate, influenced by agricultural commodity prices and demand shifts.\n",
+        "   - **Price Correlation**: Correlates with soy, pea, and other agricultural products.\n",
+        "   - **Conclusion**: Emerging market with potential; worth considering, especially as a niche or specialized contract.\n",
+        "\n",
+        "### 4. **Cod**\n",
+        "   - **Market Size**: Medium; significant consumer demand in Northern Europe.\n",
+        "   - **Trade Figures**: Heavy reliance on imports, particularly from Norway and Iceland.\n",
+        "   - **Concentration**: Moderate concentration in processing, dominated by a few key players.\n",
+        "   - **Price Volatility**: Moderate; influenced by quotas, fishing conditions, and global demand.\n",
+        "   - **Price Correlation**: Correlates with other seafood products and feed costs.\n",
+        "   - **Conclusion**: Niche market; potential for a specialized contract but limited by reliance on imports and market size.\n",
+        "\n",
+        "### 5. **Potato**\n",
+        "   - **Market Size**: Significant in the EU, especially for processed products (e.g., fries).\n",
+        "   - **Trade Figures**: Primarily intra-EU trade; limited global exports.\n",
+        "   - **Concentration**: Fragmented market with many small to medium producers.\n",
+        "   - **Price Volatility**: High; influenced by weather conditions and storage costs.\n",
+        "   - **Price Correlation**: Limited; some correlation with agricultural input costs.\n",
+        "   - **Conclusion**: High potential for a futures contract, especially in processed potato markets; volatility supports hedging.\n",
+        "\n",
+        "### 6. **Paper Pulp**\n",
+        "   - **Market Size**: Large, driven by packaging and paper demand.\n",
+        "   - **Trade Figures**: Significant intra-EU trade; imports from North America and Scandinavia.\n",
+        "   - **Concentration**: Highly concentrated; dominated by a few large firms.\n",
+        "   - **Price Volatility**: Moderate; influenced by energy costs and demand for paper products.\n",
+        "   - **Price Correlation**: Correlates with energy prices and wood products.\n",
+        "   - **Conclusion**: High potential for a futures contract due to market size, concentration, and trade dynamics.\n",
+        "\n",
+        "### 7. **Milk**\n",
+        "   - **Market Size**: Very large; the EU is a top producer.\n",
+        "   - **Trade Figures**: Significant intra-EU trade; exports mainly in powdered form.\n",
+        "   - **Concentration**: Moderate; cooperatives play a significant role.\n",
+        "   - **Price Volatility**: High; driven by seasonality, feed prices, and global demand.\n",
+        "   - **Price Correlation**: Correlates with feed prices and other dairy products.\n",
+        "   - **Conclusion**: High potential; already has established futures contracts, but additional products (e.g., skimmed milk powder) could be explored.\n",
+        "\n",
+        "### 8. **Olive Oil**\n",
+        "   - **Market Size**: Large, especially in Southern Europe.\n",
+        "   - **Trade Figures**: Significant intra-EU trade; some global exports.\n",
+        "   - **Concentration**: Fragmented, but with some dominant players in Spain and Italy.\n",
+        "   - **Price Volatility**: High; influenced by weather, yields, and global demand.\n",
+        "   - **Price Correlation**: Limited correlation with other commodities.\n",
+        "   - **Conclusion**: Moderate potential; volatility supports hedging, but market fragmentation could limit liquidity.\n",
+        "\n",
+        "### 9. **Copper**\n",
+        "   - **Market Size**: Large; essential for industrial applications.\n",
+        "   - **Trade Figures**: Significant imports of raw materials; some exports of refined products.\n",
+        "   - **Concentration**: Highly concentrated among a few major mining companies.\n",
+        "   - **Price Volatility**: High; driven by industrial demand and global economic conditions.\n",
+        "   - **Price Correlation**: Strong correlation with other base metals (e.g., zinc, nickel).\n",
+        "   - **Conclusion**: High potential; already well-established futures market, but Euronext could explore niche products.\n",
+        "\n",
+        "### 10. **Lead**\n",
+        "   - **Market Size**: Medium; important for batteries.\n",
+        "   - **Trade Figures**: Moderate imports and exports within Europe.\n",
+        "   - **Concentration**: Moderately concentrated; a few large players dominate.\n",
+        "   - **Price Volatility**: Moderate; influenced by recycling rates and battery demand.\n",
+        "   - **Price Correlation**: Correlates with other base metals, especially zinc.\n",
+        "   - **Conclusion**: Moderate potential; could serve as a complementary contract to existing base metals.\n",
+        "\n",
+        "### 11. **Zinc**\n",
+        "   - **Market Size**: Large; key for galvanizing steel.\n",
+        "   - **Trade Figures**: Significant imports and exports.\n",
+        "   - **Concentration**: Moderately concentrated with a few dominant players.\n",
+        "   - **Price Volatility**: High; driven by industrial demand and supply disruptions.\n",
+        "   - **Price Correlation**: Strong correlation with copper and lead.\n",
+        "   - **Conclusion**: High potential; well-established market, but opportunities exist for specialized contracts.\n",
+        "\n",
+        "### 12. **Rare Earths**\n",
+        "   - **Market Size**: Small but strategically important.\n",
+        "   - **Trade Figures**: Heavy reliance on imports, particularly from China.\n",
+        "   - **Concentration**: Highly concentrated; few global suppliers.\n",
+        "   - **Price Volatility**: Very high; influenced by geopolitical risks.\n",
+        "   - **Price Correlation**: Limited due to unique market dynamics.\n",
+        "   - **Conclusion**: High potential as a strategic product; could attract interest due to supply chain concerns, but liquidity may be an issue.\n",
+        "\n",
+        "### 13. **Cobalt**\n",
+        "   - **Market Size**: Small but critical for batteries.\n",
+        "   - **Trade Figures**: Significant imports; Europe is a key processor.\n",
+        "   - **Concentration**: Highly concentrated; dominated by a few major mining companies.\n",
+        "   - **Price Volatility**: Very high; driven by battery demand and geopolitical risks.\n",
+        "   - **Price Correlation**: Correlates with lithium and nickel.\n",
+        "   - **Conclusion**: High potential due to strategic importance, but liquidity might be a concern.\n",
+        "\n",
+        "### 14. **Nickel**\n",
+        "   - **Market Size**: Medium; essential for stainless steel and batteries.\n",
+        "   - **Trade Figures**: Significant imports; some processing in Europe.\n",
+        "   - **Concentration**: Moderately concentrated; a few large players dominate.\n",
+        "   - **Price Volatility**: High; driven by stainless steel demand and battery applications.\n",
+        "   - **Price Correlation**: Strong correlation with stainless steel and cobalt.\n",
+        "   - **Conclusion**: High potential; already has futures contracts, but additional niche products could be explored.\n",
+        "\n",
+        "### 15. **Steel**\n",
+        "   - **Market Size**: Very large; foundational for European industry.\n",
+        "   - **Trade Figures**: Significant intra-EU trade; imports of raw materials and exports of finished products.\n",
+        "   - **Concentration**: Moderately concentrated; dominated by a few large producers.\n",
+        "   - **Price Volatility**: Moderate; influenced by demand in construction and manufacturing.\n",
+        "   - **Price Correlation**: Correlates with iron ore, coal, and energy prices.\n",
+        "   - **Conclusion**: High potential; existing contracts could be expanded or refined.\n",
+        "\n",
+        "### 16. **Steel Scrap**\n",
+        "   - **Market Size**: Large; critical for recycling and sustainability efforts.\n",
+        "   - **Trade Figures**: Significant intra-EU trade; imports from and exports to non-EU countries.\n",
+        "   - **Concentration**: Fragmented, but with a few dominant recycling firms.\n",
+        "   - **Price Volatility**: High; influenced by demand for recycled steel and raw material prices.\n",
+        "   - **Price Correlation**: Correlates with steel and energy prices.\n",
+        "   - **Conclusion**: High potential for a futures contract, especially in the context of sustainability and circular economy trends.\n",
+        "\n",
+        "### 17. **Temperature Derivatives**\n",
+        "   - **Market Size**: Niche; used for weather-related risk management.\n",
+        "   - **Trade Figures**: Not applicable.\n",
+        "   - **Concentration**: Highly specialized market\n",
+        "\n",
+        " with few participants.\n",
+        "   - **Price Volatility**: Based on weather patterns, can be high.\n",
+        "   - **Price Correlation**: Limited; depends on specific weather-related factors.\n",
+        "   - **Conclusion**: Limited potential due to niche market size; best suited as a specialized financial product.\n",
+        "\n",
+        "### 18. **Rain Derivatives**\n",
+        "   - **Market Size**: Niche; similar to temperature derivatives.\n",
+        "   - **Trade Figures**: Not applicable.\n",
+        "   - **Concentration**: Highly specialized.\n",
+        "   - **Price Volatility**: Highly variable, depending on weather conditions.\n",
+        "   - **Price Correlation**: Limited.\n",
+        "   - **Conclusion**: Similar to temperature derivatives; niche market with limited potential for a broader audience.\n",
+        "\n",
+        "### 19. **Container Freight Market**\n",
+        "   - **Market Size**: Large; critical for global trade, particularly post-COVID.\n",
+        "   - **Trade Figures**: Significant intra-EU and global trade.\n",
+        "   - **Concentration**: Highly concentrated among a few major shipping lines.\n",
+        "   - **Price Volatility**: Very high; influenced by global supply chain disruptions.\n",
+        "   - **Price Correlation**: Correlates with global trade volumes and fuel prices.\n",
+        "   - **Conclusion**: High potential; strong demand for hedging instruments, especially after recent volatility.\n",
+        "\n",
+        "### 20. **Bulk Freight Market**\n",
+        "   - **Market Size**: Large; essential for raw material transportation.\n",
+        "   - **Trade Figures**: Significant global trade.\n",
+        "   - **Concentration**: Moderately concentrated; dominated by a few large shipping companies.\n",
+        "   - **Price Volatility**: High; driven by global trade and fuel prices.\n",
+        "   - **Price Correlation**: Correlates with global commodity demand and energy prices.\n",
+        "   - **Conclusion**: High potential; existing futures contracts could be expanded or refined.\n",
+        "\n",
+        "### 21. **Salt**\n",
+        "   - **Market Size**: Medium; important for chemical industry and de-icing.\n",
+        "   - **Trade Figures**: Moderate imports and exports within Europe.\n",
+        "   - **Concentration**: Moderately concentrated; a few large producers dominate.\n",
+        "   - **Price Volatility**: Low; stable demand with seasonal peaks.\n",
+        "   - **Price Correlation**: Limited.\n",
+        "   - **Conclusion**: Low potential due to low price volatility and market size.\n",
+        "\n",
+        "### 22. **Jet Fuel**\n",
+        "   - **Market Size**: Large; critical for the aviation industry.\n",
+        "   - **Trade Figures**: Significant intra-EU trade and global imports.\n",
+        "   - **Concentration**: Highly concentrated; dominated by a few major oil companies.\n",
+        "   - **Price Volatility**: High; influenced by crude oil prices and aviation demand.\n",
+        "   - **Price Correlation**: Strong correlation with crude oil and distillates.\n",
+        "   - **Conclusion**: High potential; existing futures market is robust, but opportunities exist for regional contracts.\n",
+        "\n",
+        "### 23. **Sugar**\n",
+        "   - **Market Size**: Large; significant in food and beverage industry.\n",
+        "   - **Trade Figures**: Significant intra-EU trade; imports from tropical regions.\n",
+        "   - **Concentration**: Moderately concentrated; a few large producers dominate.\n",
+        "   - **Price Volatility**: High; influenced by weather conditions and global demand.\n",
+        "   - **Price Correlation**: Correlates with other agricultural commodities.\n",
+        "   - **Conclusion**: High potential; existing contracts could be expanded, especially with a focus on the European market.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "- **High Potential for New Contracts**: **Pork, Copper, Paper Pulp, Nickel, Steel, Container Freight** - Due to large market size, high trade activity, price volatility, and existing demand for hedging.\n",
+        "- **Moderate Potential**: **Beef, Vegetal Protein, Potatoes, Milk, Olive Oil, Zinc, Cobalt, Steel Scrap, Jet Fuel, Sugar** - These markets have notable size and volatility but may face challenges in market liquidity or fragmentation.\n",
+        "- **Low Potential/Niche**: **Cod, Rare Earths, Temperature/Rain Derivatives, Salt** - These markets are either niche, highly fragmented, or have limited liquidity, making them riskier or less attractive for launching new futures contracts."
+      ],
+      "metadata": {
+        "id": "40OwGTRZnebg"
+      }
     },
     {
       "cell_type": "markdown",
@@ -934,7 +1134,7 @@
         "id": "YIyik6iPTD3h",
         "outputId": "da3b5322-751e-4db7-fc70-eb3ec60089df"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
